--- a/css/style.css
+++ b/css/style.css
@@ -7613,7 +7613,7 @@ html.has-scroll-dragging {
   display: flex;
 }
 
-.competencies__hedading {
+.competencies__image {
   width: 50%;
   padding: 0 80px;
 }
@@ -7647,7 +7647,21 @@ html.has-scroll-dragging {
   width: calc(50% - 40px);
 }
 
-.competencies__hedading,
+.competencies__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.competencies__image img {
+  width: 155px;
+  height: 48px;
+  object-fit: contain;
+}
+
+.competencies__image,
 .competencies__description,
 .competencies__item,
 .competencies__button,
@@ -7660,7 +7674,7 @@ html.has-scroll-dragging {
   transition: opacity 0.3s linear, transform 0.2s linear;
 }
 
-.loaded .competencies__bottom.animate .competencies__hedading,
+.loaded .competencies__bottom.animate .competencies__image,
 .loaded .competencies__bottom.animate .competencies__description,
 .loaded .competencies__bottom.animate .competencies__item,
 .loaded .competencies__bottom.animate .competencies__button,
@@ -8614,7 +8628,7 @@ html.has-scroll-dragging {
     padding: 140px 60px 60px;
     gap: 30px;
   }
-  .competencies__hedading {
+  .competencies__image {
     padding: 0 60px;
   }
   .competencies__button {
@@ -9294,12 +9308,12 @@ html.has-scroll-dragging {
   .competencies__bottom {
     padding: 30px 0;
   }
-  .competencies__hedading,
+  .competencies__image,
   .competencies__info,
   .competencies__list {
     padding: 0 30px;
   }
-  .competencies__hedading {
+  .competencies__image {
     width: 100%;
   }
   .competencies__button {
@@ -10514,7 +10528,7 @@ html.has-scroll-dragging {
   }
   .competencies__info,
   .competencies__list,
-  .competencies__hedading {
+  .competencies__image {
     padding: 0;
     width: 100%;
   }
