--- a/css/style.css
+++ b/css/style.css
@@ -880,7 +880,7 @@ section {
 }
 
 .button__count {
-  padding: 0 14px 0 0;
+  /* padding: 0 14px 0 0; */
 }
 
 .button__count small {
@@ -4406,6 +4406,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 200px;
   gap: 60px 0;
   flex-wrap: wrap;
 }
@@ -7840,6 +7841,7 @@ html.has-scroll-dragging {
 
 .articles_page__list {
   display: inline-block;
+  width: 100%;
   padding: 80px 0 0;
 }
 
