--- a/css/style.css
+++ b/css/style.css
@@ -8415,6 +8415,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   height: 50px;
+  padding: 30px 0 0;
   align-items: center;
   gap: 10px;
 }
