--- a/css/style.css
+++ b/css/style.css
@@ -3882,8 +3882,8 @@ html.has-scroll-dragging {
 }
     
 .digital__square {
-  height: 100%;
   width: 100%;
+  height: 100%;
   display: block;
   position: absolute;
   top: 0;
@@ -3891,122 +3891,10 @@ html.has-scroll-dragging {
   z-index: 0;
 }
 
-.digital__square_list {
-  position: absolute;
-  top: 0;
-  left: 0;
+.digital__square canvas {
   display: block;
-  height: 100%;
   width: 100%;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.digital__square_item {
-  width: 40px;
-  height: 40px;
-  background-color: var(--border);
-  border-radius: 50%;
-  position: absolute;
-  bottom: -150px;
-  -webkit-animation: animate var(--animation-time) linear infinite;
-  animation: animate var(--animation-time) linear infinite;
-}
-
-.digital__square_item:nth-child(1) {
-  background-color: #c7e3e7;
-}
-
-.digital__square_item:nth-child(2) {
-  background-color: #4ba5b1;
-}
-
-.digital__square_item:nth-child(3) {
-  background-color: #44959f;
-}
-
-.digital__square_item:nth-child(4) {
-  background-color: #3c848e;
-}
-
-.digital__square_item:nth-child(5) {
-  background-color: #387c85;
-}
-
-.digital__square_item:nth-child(6) {
-  background-color: #cfc7e7;
-}
-
-.digital__square_item:nth-child(7) {
-  background-color: #644bb1;
-}
-
-.digital__square_item:nth-child(8) {
-  background-color: #5a449f;
-}
-
-.digital__square_item:nth-child(9) {
-  background-color: #503c8e;
-}
-
-.digital__square_item:nth-child(10) {
-  background-color: #4b3885;
-}
-
-.digital__square_item:nth-child(11) {
-  background-color: #b0d0fa;
-}
-
-.digital__square_item:nth-child(12) {
-  background-color: #005ed8;
-}
-
-.digital__square_item:nth-child(13) {
-  background-color: #004eb4;
-}
-
-.digital__square_item:nth-child(14) {
-  background-color: #fff1bd;
-}
-
-.digital__square_item:nth-child(15) {
-  background-color: #ffd129;
-}
-
-.digital__square_item:nth-child(16) {
-  background-color: #fff8df;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    -webkit-transform: translateY(0) rotate(0deg);
-    transform: translateY(0) rotate(0deg);
-    opacity: 1;
-    border-radius: 0%;
-  }
-  100% {
-    -webkit-transform: translateY(-1000px) rotate(720deg);
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
-}
-
-@keyframes animate {
-  0% {
-    -webkit-transform: translateY(0) rotate(0deg);
-    transform: translateY(0) rotate(0deg);
-    opacity: 1;
-    border-radius: 0%;
-  }
-  100% {
-    -webkit-transform: translateY(-1000px) rotate(720deg);
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
+  height: 100%;
 }
 
 /* end digital */
